# decky-qqmusic

./: .mise.toml  AGENTS.md  Dockerfile  README.md  build.sh  main.py  package.json  plugin.json  pnpm-lock.yaml  provider.md  pyproject.toml  requirements.txt
backend/: __init__.py  config_manager.py  types.py  update_checker.py  util.py
backend/providers/: __init__.py  base.py  manager.py  netease.py  qqmusic.py
docs/: performance-optimization-report.md
src/: index.tsx  types.d.ts
src/api/: index.ts
src/components/: BackButton.tsx  EmptyState.tsx  ErrorBoundary.tsx  FocusableList.tsx  GuessLikeSection.tsx  HistoryPage.tsx  HomePage.tsx  LoadingSpinner.tsx  LoginPage.tsx  PlayerBar.tsx  PlayerPage.tsx  PlaylistDetailPage.tsx  PlaylistsPage.tsx  ProviderSettingsPage.tsx  Router.tsx  SafeImage.tsx  SearchPage.tsx  SettingsPage.tsx  SongItem.tsx  SongList.tsx  index.ts
src/components/common/: SafeImage.tsx
src/components/player/: PlayerBar.tsx
src/components/settings/: AboutSection.tsx  QualitySelector.tsx  UpdateSection.tsx  index.ts
src/components/sidebar-player/: PlayerControls.tsx  PlayerCover.tsx  PlayerError.tsx  PlayerInfo.tsx  PlayerProgress.tsx  PlayerShortcuts.tsx  PlayerVolume.tsx  index.ts
src/components/song/: GuessLikeSection.tsx
src/features/player/: index.ts
src/hooks/: playerAudio.ts  playerControls.ts  playerHooks.ts  playerLyric.ts  playerMethods.ts  playerNavigation.ts  playerPlayback.ts  playerQueue.ts  playerSettings.ts  playerShuffle.ts  playerState.ts  useAppLogic.ts  useAutoLoadGuessLike.ts  useDataManager.ts  useMountedRef.ts  usePlayer.ts  useProvider.ts  useSearchHistory.ts  useSongQueue.ts  useSteamInput.ts
src/hooks/dataManager/: cache.ts  imagePreloader.ts  index.ts  loaders.ts
src/navigation/: Router.tsx
src/pages/: FullscreenPlayer.tsx
src/patches/: menuPatch.tsx
src/state/: authState.ts
src/types/: index.ts
src/utils/: logger.ts  lyricParser.ts
(+26 files in other folders)
